<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themebackgroud"
    tools:context=".loginactivity">


    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="201dp"
        android:layout_height="176dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="62dp"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_post_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="262dp"
        android:ems="10"
        android:hint="E-mail"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxStrokeColor="@color/colorProfile"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Light.Hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_email_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="0dp"
        app:passwordToggleEnabled="true"
        android:hint="Password"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxStrokeColor="@color/colorProfile"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Light.Hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_icon"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="109dp"
        android:layout_marginTop="416dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="Login"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/need_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_icon"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="111dp"
        android:text="Dont have an Account?"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/need_account2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_icon"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="511dp"
        android:layout_marginEnd="160dp"
        android:text="or  Login with"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="63dp"
        android:layout_height="73dp"
        android:layout_below="@+id/login_icon"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="358dp">

        <ImageView
            android:id="@+id/google_signin_button"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:src="@drawable/google" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="48dp"
        android:text="Forgot Password ?"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />


</RelativeLayout>